# investors-sample

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/database/: __init__.py  access.py  models.py
backend/schemas/: schemas.py
backend/scripts/: csv_import.py
